# libiconv

./: CMakeLists.txt  config.h.cmake.in  iconv-config.cmake.in
cmake/: FindGperf.cmake  FindMan2html.cmake  genaliases.cmake  gperf-static.cmake
include/: export.h
lib/: genflags.c
libcharset/: config.h.cmake.in
libcharset/include/: export.h
libcharset/lib/: relocatable-stub.c
